class for testing minor edits.